test/log/reduction/vrmax_v_u32_m.txt
vrmax_v_u32_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vrmax_v_u32_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vrmax_v_u32_m.c:30:6: warning: no previous prototype for 'vrmax_v_u32_m_golden' [-Wmissing-prototypes]
   30 | void vrmax_v_u32_m_golden(uint64_t *mask,uint32_t *maskoff,uint32_t *a,uint32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~
vrmax_v_u32_m.c: In function 'vrmax_v_u32_m_golden':
vrmax_v_u32_m.c:31:1: error: unknown type name 'Operator'
   31 | Operator Line --- TODO
      | ^~~~~~~~
vrmax_v_u32_m.c:31:15: error: expected '=', ',', ';', 'asm' or '__attribute__' before '--' token
   31 | Operator Line --- TODO
      |               ^~
vrmax_v_u32_m.c:35:5: warning: 'main' is normally a non-static function [-Wmain]
   35 | int main(void) {
      |     ^~~~
vrmax_v_u32_m.c: In function 'main':
vrmax_v_u32_m.c:37:14: warning: declaration of 'mask' shadows a parameter [-Wshadow]
   37 |     bool16_t mask;
      |              ^~~~
vrmax_v_u32_m.c:30:37: note: shadowed declaration is here
   30 | void vrmax_v_u32_m_golden(uint64_t *mask,uint32_t *maskoff,uint32_t *a,uint32_t *exp_result) {
      |                           ~~~~~~~~~~^~~~
vrmax_v_u32_m.c:38:17: warning: declaration of 'maskoff' shadows a parameter [-Wshadow]
   38 |     uint32x16_t maskoff;
      |                 ^~~~~~~
vrmax_v_u32_m.c:30:52: note: shadowed declaration is here
   30 | void vrmax_v_u32_m_golden(uint64_t *mask,uint32_t *maskoff,uint32_t *a,uint32_t *exp_result) {
      |                                          ~~~~~~~~~~^~~~~~~
vrmax_v_u32_m.c:39:17: warning: declaration of 'a' shadows a parameter [-Wshadow]
   39 |     uint32x16_t a;
      |                 ^
vrmax_v_u32_m.c:30:70: note: shadowed declaration is here
   30 | void vrmax_v_u32_m_golden(uint64_t *mask,uint32_t *maskoff,uint32_t *a,uint32_t *exp_result) {
      |                                                            ~~~~~~~~~~^
vrmax_v_u32_m.c:45:14: warning: declaration of 'exp_result' shadows a parameter [-Wshadow]
   45 |     uint32_t exp_result[16] = {0};
      |              ^~~~~~~~~~
vrmax_v_u32_m.c:30:82: note: shadowed declaration is here
   30 | void vrmax_v_u32_m_golden(uint64_t *mask,uint32_t *maskoff,uint32_t *a,uint32_t *exp_result) {
      |                                                                        ~~~~~~~~~~^~~~~~~~~~
vrmax_v_u32_m.c:47:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   47 |     data_init_bool(mask, exp_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vrmax_v_u32_m.c:55:28: error: incompatible type for argument 1 of 'vrmax_v_u32_m'
   55 |     result = vrmax_v_u32_m(mask,maskoff,a);
      |                            ^~~~
      |                            |
      |                            bool16_t
In file included from vrmax_v_u32_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:1926:1: note: expected 'bool16x2_t' but argument is of type 'bool16_t'
 1926 | __RUGRATS_REDUC_V_OP (rmax, u, uint, 32, 16)
      | ^~~~~~~~~~~~~~~~~~~~
vrmax_v_u32_m.c:60:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'uint32_t' {aka 'long unsigned int'} [-Wformat=]
   60 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     uint32_t {aka long unsigned int}
      |                                                               %lx
vrmax_v_u32_m.c: In function 'vrmax_v_u32_m_golden':
vrmax_v_u32_m.c:75:1: error: expected declaration or statement at end of input
   75 | }
      | ^
vrmax_v_u32_m.c:30:37: warning: unused parameter 'mask' [-Wunused-parameter]
   30 | void vrmax_v_u32_m_golden(uint64_t *mask,uint32_t *maskoff,uint32_t *a,uint32_t *exp_result) {
      |                           ~~~~~~~~~~^~~~
vrmax_v_u32_m.c:30:52: warning: unused parameter 'maskoff' [-Wunused-parameter]
   30 | void vrmax_v_u32_m_golden(uint64_t *mask,uint32_t *maskoff,uint32_t *a,uint32_t *exp_result) {
      |                                          ~~~~~~~~~~^~~~~~~
vrmax_v_u32_m.c:30:70: warning: unused parameter 'a' [-Wunused-parameter]
   30 | void vrmax_v_u32_m_golden(uint64_t *mask,uint32_t *maskoff,uint32_t *a,uint32_t *exp_result) {
      |                                                            ~~~~~~~~~~^
vrmax_v_u32_m.c:30:82: warning: unused parameter 'exp_result' [-Wunused-parameter]
   30 | void vrmax_v_u32_m_golden(uint64_t *mask,uint32_t *maskoff,uint32_t *a,uint32_t *exp_result) {
      |                                                                        ~~~~~~~~~~^~~~~~~~~~
At top level:
vrmax_v_u32_m.c:35:5: warning: 'main' defined but not used [-Wunused-function]
   35 | int main(void) {
      |     ^~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrmax_v_u32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vrmax_v_u32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vrmax_v_u32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrmax_v_u32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed